# src/routes/notifications.ts
@@ -1,11 +1,17 @@
 import express from 'express'
-import { getNotifications, readNotifications, deleteAll } from 'controllers'
+import {
+  getNotifications,
+  readNotifications,
+  deleteAll,
+  readAllNotifications,
+} from 'controllers'
 import { isAuth } from 'middlewares'
 
 const router = express.Router()
 
-router.get('/notifications',  getNotifications)
-router.patch('/read-notifications/:notificationId',  readNotifications)
-router.delete('/delete-notifications',  deleteAll)
+router.get('/notifications', isAuth, getNotifications)
+router.patch('/read-notifications/:notificationId', readNotifications)
+router.put('/read-all', readAllNotifications)
+router.delete('/delete-notifications', deleteAll)
 
 export default router
